Add deployment launch checks

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
@@ -8,6 +8,8 @@ DeleteResourceHandler_Resource=Resource: {0}
 DeploymentDebugModelPresentation_Disconnected=<disconnected>
 DeploymentDebugModelPresentation_Terminated=<terminated>
 KillDeviceHandler_KillDeviceError=Kill Device Error
+LaunchActiveStatusHandler_LaunchActiveMessage=Terminate active launch for {0}
+LaunchActiveStatusHandler_LaunchActiveTitle=Launch Active
 OnlineCreateConnectionHandler_CreateConnectionError=Create Connection Error
 OnlineCreateFBHandler_OnlineCreateFunctionBlockError=Online Create Function Block Error
 OnlineStartFBHandler_OnlineStartFunctionBlockError=Online Start Function Block Error
