Add watchpoints for monitoring deployments

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
@@ -19,6 +19,7 @@ DeploymentLaunchConfigurationTab_PollingIntervalUnitLabel=ms
 DeploymentLaunchConfigurationTab_SelectionLabel=Selection
 DeploymentLaunchConfigurationTab_SystemLabel=System:
 DeploymentLaunchConfigurationTab_SystemMessage=System File
+DeploymentDebugModelPresentation_WatchpointText={0} [{1}]
 KillDeviceHandler_KillDeviceError=Kill Device Error
 LaunchActiveStatusHandler_LaunchActiveMessage=Terminate active launch for {0}
 LaunchActiveStatusHandler_LaunchActiveTitle=Launch Active
