Add deployment watchpoints detail pane

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
@@ -20,6 +20,9 @@ DeploymentLaunchConfigurationTab_SelectionLabel=Selection
 DeploymentLaunchConfigurationTab_SystemLabel=System:
 DeploymentLaunchConfigurationTab_SystemMessage=System File
 DeploymentDebugModelPresentation_WatchpointText={0} [{1}]
+DeploymentWatchpointDetailPane_Description=Force Value
+DeploymentWatchpointDetailPane_Name=Force Value
+DeploymentWatchpointForceEditor_ForceLabel=Force
 KillDeviceHandler_KillDeviceError=Kill Device Error
 LaunchActiveStatusHandler_LaunchActiveMessage=Terminate active launch for {0}
 LaunchActiveStatusHandler_LaunchActiveTitle=Launch Active
