Add debug target for deployment

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
@@ -5,6 +5,8 @@ AbstractOnlineFBHandler_FunctionBlock=Function Block: {0}
 CleanDeviceHandler_CleanDeviceError=Clean Device Error
 DeleteResourceHandler_DeleteResourceError=Delete Resource Error
 DeleteResourceHandler_Resource=Resource: {0}
+DeploymentDebugModelPresentation_Disconnected=<disconnected>
+DeploymentDebugModelPresentation_Terminated=<terminated>
 KillDeviceHandler_KillDeviceError=Kill Device Error
 OnlineCreateConnectionHandler_CreateConnectionError=Create Connection Error
 OnlineCreateFBHandler_OnlineCreateFunctionBlockError=Online Create Function Block Error
