--- a/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
@@ -1,4 +1,11 @@
+DeploymentDebugStackFrame_Name=Watches
+DeploymentDebugTarget_ConnectJobName=Connect to {0}
+DeploymentDebugTarget_UnsupportedOperation=Unsupported operation
+DeploymentDebugThread_Name=Monitoring
+DeploymentLaunchConfigurationDelegate_DeploymentError=Error computing deployment data
+DeploymentLaunchConfigurationDelegate_IllegalLaunchMode=Illegal launch mode: {0}
 DeploymentProcess_ExeceptionOccured=Exception occurred: {0}
+DeploymentProcess_Name=Deploy {0}
 DeploymentProcess_StillRunning=The process is still running
 DeploymentProcess_Terminated=Terminated\n
 DeploymentStreamsProxy_ConnectedToDevice=<\!--  Connected to device: {0} -->\n\n
