Add devices and resources for deployment debug

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
@@ -1,3 +1,10 @@
+DeploymentDebugDevice_ConnectError=Could not connect to device {0}
+DeploymentDebugDevice_DisconnectError=Could not disconnect from device {0}
+DeploymentDebugDevice_ReadWatchesError=Could not read watches from device {0}
+DeploymentDebugDevice_TerminateError=Could not kill device {0}
+DeploymentDebugResource_ResumeError=Could not start resource {0}
+DeploymentDebugResource_SuspendError=Could not stop resource {0}
+DeploymentDebugResource_TerminateError=Could not kill resource {0}
 DeploymentDebugStackFrame_Name=Watches
 DeploymentDebugTarget_ConnectJobName=Connect to {0}
 DeploymentDebugTarget_UnsupportedOperation=Unsupported operation
