Add watches support in deployment debug

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
@@ -1,7 +1,10 @@
+AbstractRuntimeWatch_AddWatch=Cannot add watch {0}
+AbstractRuntimeWatch_RemoveWatch=Cannot remove watch {0}
 DeploymentDebugDevice_ConnectError=Could not connect to device {0}
 DeploymentDebugDevice_DisconnectError=Could not disconnect from device {0}
 DeploymentDebugDevice_ReadWatchesError=Could not read watches from device {0}
 DeploymentDebugDevice_TerminateError=Could not kill device {0}
+EventWatch_TriggerEventError=Cannot trigger event for watch {0}
 DeploymentDebugResource_ResumeError=Could not start resource {0}
 DeploymentDebugResource_SuspendError=Could not stop resource {0}
 DeploymentDebugResource_TerminateError=Could not kill resource {0}
@@ -24,3 +27,6 @@ DeploymentStreamsProxy_ConnectedToDevice=<\!--  Connected to device: {0} -->\n\n
 DeploymentStreamsProxy_DeployedElements=Deployed: {0} with {1} elements\n
 DeploymentStreamsProxy_Deploying=Deploying: {0}\n
 DeploymentStreamsProxy_DisconnectedFromDevice=<\!--  Disconnected from device: {0} -->\n\n
+VarDeclarationWatch_ClearForceError=Cannot clear force of watch {0}
+VarDeclarationWatch_ForceError=Cannot force value of watch {0}
+VarDeclarationWatch_WriteError=Cannot write value to watch {0}
