Add polling interval and terminate options in deployment config

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
@@ -7,6 +7,18 @@ DeleteResourceHandler_DeleteResourceError=Delete Resource Error
 DeleteResourceHandler_Resource=Resource: {0}
 DeploymentDebugModelPresentation_Disconnected=<disconnected>
 DeploymentDebugModelPresentation_Terminated=<terminated>
+DeploymentLaunchConfigurationTab_AllowTerminateLabel=Allow terminate/suspend remote:
+DeploymentLaunchConfigurationTab_BrowseLabel=Browse...
+DeploymentLaunchConfigurationTab_InvalidPollingIntervalError=Invalid polling interval
+DeploymentLaunchConfigurationTab_Name=Deploy
+DeploymentLaunchConfigurationTab_NegativePollingIntervalError=The polling interval must be positive
+DeploymentLaunchConfigurationTab_OptionsLabel=Options
+DeploymentLaunchConfigurationTab_PollingIntervalLabel=Polling interval:
+DeploymentLaunchConfigurationTab_PollingIntervalMessage=Polling Interval in milliseconds
+DeploymentLaunchConfigurationTab_PollingIntervalUnitLabel=ms
+DeploymentLaunchConfigurationTab_SelectionLabel=Selection
+DeploymentLaunchConfigurationTab_SystemLabel=System:
+DeploymentLaunchConfigurationTab_SystemMessage=System File
 KillDeviceHandler_KillDeviceError=Kill Device Error
 LaunchActiveStatusHandler_LaunchActiveMessage=Terminate active launch for {0}
 LaunchActiveStatusHandler_LaunchActiveTitle=Launch Active
