--- a/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
@@ -9,6 +9,9 @@ DeploymentDebugStackFrame_Name=Watches
 DeploymentDebugTarget_ConnectJobName=Connect to {0}
 DeploymentDebugTarget_UnsupportedOperation=Unsupported operation
 DeploymentDebugThread_Name=Monitoring
+DeploymentLaunchConfigurationAttributes_AllowTerminate_Always=Always
+DeploymentLaunchConfigurationAttributes_AllowTerminate_DebugOnly=Debug Only
+DeploymentLaunchConfigurationAttributes_AllowTerminate_Never=Never
 DeploymentLaunchConfigurationDelegate_CannotFindSystem=Cannot find system to deploy
 DeploymentLaunchConfigurationDelegate_DeploymentError=Error computing deployment data
 DeploymentLaunchConfigurationDelegate_IllegalLaunchMode=Illegal launch mode: {0}
