Fixed duplicated creation of UpdateFbInterfaceChange

--- a/plugins/org.eclipse.fordiac.ide.typemanagement/src/org/eclipse/fordiac/ide/typemanagement/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.typemanagement/src/org/eclipse/fordiac/ide/typemanagement/messages.properties
@@ -70,7 +70,7 @@ ConnectionsToStructRefactoring_FBNotInSystem= FB URI is not in the target system
 ReplaceVarsWithStructChange_NotContained= is not contained in 
 DeleteFBTypeParticipant_Name=Delete IEC 61499 Type
 DeleteFBTypeParticipant_TypeInUseWarning=FB type {0} is used in the following types: {1}
-DeleteFBTypeParticipant_Change_DeleteFBTypeInterface=Update FB type interface: {0}
+DeleteFBTypeParticipant_Change_DeleteFBTypeInterface=Update Interface Pins in {0} that contain {1}
 DeleteFBTypeParticipant_Change_UpdateMemberVariable=Update member variable {0} of type {1} in: {2}
 DeleteFBTypeParticipant_Change_DeleteSubappPins=Delete pin {0} in subapp: {1}
 DeleteFBTypeParticipant_Change_SafeDeletionChangeTitle=Handle Instances of {0}
