Add deployment debug preferences

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
@@ -20,6 +20,9 @@ DeploymentLaunchConfigurationTab_SelectionLabel=Selection
 DeploymentLaunchConfigurationTab_SystemLabel=System:
 DeploymentLaunchConfigurationTab_SystemMessage=System File
 DeploymentDebugModelPresentation_WatchpointText={0} [{1}]
+DeploymentDebugPreferencePage_Description=Settings for remote deployments and online monitoring
+DeploymentDebugPreferencePage_MonitoringValueTransparency=Transparency for monitoring values (from 0 to 255)
+DeploymentDebugPreferencePage_MonitoringValueWriteThrough=Write online value changes in editor through to instances
 DeploymentWatchpointDetailPane_Description=Force Value
 DeploymentWatchpointDetailPane_Name=Force Value
 DeploymentWatchpointForceEditor_ForceLabel=Force
