Added varinout/data visibility checkboxes to nat table for untyped Subapps (#668)

--- a/plugins/org.eclipse.fordiac.ide.ui/src/org/eclipse/fordiac/ide/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.ui/src/org/eclipse/fordiac/ide/ui/messages.properties
@@ -84,6 +84,8 @@ Vendor=Vendor
 Version=Version
 VersionInfo=Version Info
 Visible=Visible
+Visible_IN=Input Visible
+Visible_OUT=Output Visible
 VarConfig=VAR Config
 Constants=Constants
 Width=Width
