--- a/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/src/org/eclipse/fordiac/ide/deployment/debug/ui/messages.properties
@@ -1,5 +1,11 @@
 AbstractDeploymentCommand_ExtendedDeploymentErrorMessage={0}\nRequest: {1}\nProblem: {2}\nSource: {3}
 AbstractDeploymentCommand_SimpleDeploymentErrorMessage={0}\nProblem: {1}\nSource: {2}
+AbstractDeploymentHandler_ElementNotInResource=The selected element {0} is not contained in a resource
+AbstractDeploymentHandler_ElementNotInSystem=The selected element {0} is not contained in a system
+AbstractDeploymentHandler_LaunchDialogMessage=You are currently offline.\nLaunch monitoring session for system {0}?
+AbstractDeploymentHandler_LaunchDialogTitle=Offline
+AbstractDeploymentHandler_NoFileForSystem=Cannot determine system file for system {0}
+AbstractDeploymentHandler_NoInteractorForDevice=No interactor for device {0}
 AbstractDeviceDeploymentCommand_DeviceName=Device: {0}
 AbstractOnlineFBHandler_FunctionBlock=Function Block: {0}
 CleanDeviceHandler_CleanDeviceError=Clean Device Error
@@ -26,6 +32,8 @@ DeploymentDebugPreferencePage_MonitoringValueWriteThrough=Write online value cha
 DeploymentWatchpointDetailPane_Description=Force Value
 DeploymentWatchpointDetailPane_Name=Force Value
 DeploymentWatchpointForceEditor_ForceLabel=Force
+ForceHandler_ForceDialogInput=Value
+ForceHandler_ForceDialogTitle=Force Value
 KillDeviceHandler_KillDeviceError=Kill Device Error
 LaunchActiveStatusHandler_LaunchActiveMessage=Terminate active launch for {0}
 LaunchActiveStatusHandler_LaunchActiveTitle=Launch Active
