Simplify contract dialogs
Use a general-purpose dialog instead of having a unique dialog for each different contract rule.

--- a/plugins/org.eclipse.fordiac.ide.contracts/src/org/eclipse/fordiac/ide/contracts/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.contracts/src/org/eclipse/fordiac/ide/contracts/messages.properties
@@ -1,5 +1,5 @@
  ###############################################################################
- # Copyright (c) 2023 Paul Pavlicek
+ # Copyright (c) 2023, 2024 Paul Pavlicek and others
  #
  # This program and the accompanying materials are made available under the
  # terms of the Eclipse Public License 2.0 which is available at
@@ -10,6 +10,8 @@
  # Contributors:
  #   Paul Pavlicek
  #     - initial API and implementation and/or initial documentation
+ #   Felix Schmid
+ #     - removed unused messages
  ###############################################################################
 Contract_ErrorAssumption=Not Valid Assumption: 
 Contract_ErrorAssumptionsGuarantees=Assumptions&Guarantees are Inconsistent
@@ -19,37 +21,15 @@ Contract_ErrorIncosistentAssumptions=Assumptions are Inconsistent
 Contract_ErrorIncosistentGuarantees=Guarantees are Inconsistent
 Contract_ErrorName=SubApp Name Error
 
-DefineFbInterfaceConstraintHandler_ErrorMessage=Only one, two or three event pins of the same FB instance allowed
-DefineFbInterfaceConstraintHandler_Error=Pin Error
-DefineFbInterfaceConstraintHandler_ErrorText=Select an INPUT Event to Define Assumption
-DefineFbInterfaceConstraintHandler_ErrorTitle=Invalid Selection
-DefineFbInterfaceConstraintHandler_Info=Only one, two or three event pins of the same FB instance allowed
-DefineFbInterfaceConstraintHandler_InfoErrorGuarantee=Select an INPUT and OUTPUT Event to Define Guarantee
-DefineFbInterfaceConstraintHandler_ThreePinErrorMessage=Select an INPUT and two OUTPUT Event to Define Guarantee
 DefineFbInterfaceConstraintHandler_Title=Invalid Selection
-DefineFBDecisionTwoPinDialog_CreateGuarantee=Create Guarantee
+DefineFbInterfaceConstraintHandler_Info=Select 1 input pin and optionally up to 2 output pins of the same FB instance.
+
+DefineFBDecisionTwoPinDialog_Title=Assumption-Guarantee-Contract
+DefineFBDecisionTwoPinDialog_Info=Choose one of the two options to create a reaction or guarantee between two pins.
 DefineFBDecisionTwoPinDialog_CreateReaction=Create Reaction
-DefineFBDecisionTwoPinDialog_Error=Selection Error
-DefineFBDecisionTwoPinDialog_ErrorInfo=Please select one
-DefineFBDecisionTwoPinDialog_Info=Choose one of the two options to create a reaction or guarantee between two pins
-DefineFBReactionOnePinDialog_Button=OK
-DefineFBReactionOnePinDialog_DefineAssumption=Define Assumption:
-DefineFBReactionOnePinDialog_DefineConstraint=Define Assumption:
-DefineFBReactionOnePinDialog_Error=Error Saving Contract
-DefineFBReactionOnePinDialog_Event=Event 
-DefineFBReactionOnePinDialog_Every=every
-DefineFBReactionOnePinDialog_Info=This dialog allows you to define a assumption on an input event of the FB instance. It will be stored alongside the FB in the model.
-DefineFBReactionOnePinDialog_Occurs=occurs 
-DefineFBReactionOnePinDialog_Offset=Specify offset
-DefineFBReactionOnePinDialog_PleaseFill=Please fill in all required elements correctly\!
-DefineFBReactionOnePinDialog_Reaction=Reaction (
-DefineFBReactionOnePinDialog_SpecifyOffset=Specify offset
-DefineFBReactionOnePinDialog_OffsetDialog=Offset
-DefineFBReactionOnePinDialog_Title=Assumption-Guarantee-Contract 
-DefineFBReactionOnePinDialog_Within=within
-DefineFBReactionThreePinDialog_DefineGuarantee=Define guarantee:
-DefineFBReactionTwoPinDialog_Button=OK
-DefineFBReactionTwoPinDialog_Info=This dialog allows you to define a guarantee between an input event and an output event of the FB instance. It will be stored alongside the FB in the model.
-DefineFBReactionTwoPinDialog_OccursWithin=occurs within
-DefineFBReactionTwoPinDialog_Reaction=Reaction (
-DefineFBReactionTwoPinDialog_Title=Assumption-Guarantee-Contract 
+DefineFBDecisionTwoPinDialog_CreateGuarantee=Create Guarantee
+
+ContractElementDialog_Title=Assumption-Guarantee-Contract
+ContractElementDialog_Info=This dialog allows you to define a new contract rule for the FB instance. It will be stored alongside the FB in the model.
+ContractElementDialog_Ok=OK
+ContractElementDialog_Define=Define contract rule:
