Gracefully handle watching of elements that are not in a resource

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug/src/org/eclipse/fordiac/ide/deployment/debug/messages.properties
@@ -1,5 +1,6 @@
 AbstractRuntimeWatch_AddWatch=Cannot add watch {0}
 AbstractRuntimeWatch_RemoveWatch=Cannot remove watch {0}
+AbstractVariableWatch_ElementNotInResource=The watched element {0} is not contained in a resource
 DeploymentDebugDevice_ConnectError=Could not connect to device {0}
 DeploymentDebugDevice_DisconnectError=Could not disconnect from device {0}
 DeploymentDebugDevice_ReadWatchesError=Could not read watches from device {0}
