Add best fitting type quickfix
provides a list based on the deleted type's name

--- a/plugins/org.eclipse.fordiac.ide.ui/src/org/eclipse/fordiac/ide/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.ui/src/org/eclipse/fordiac/ide/ui/messages.properties
@@ -136,3 +136,5 @@ Repair_Dialog_FB_Title=Repair broken FB
 Repair_Dialog_New_FB=Create new FB
 Repair_Dialog_ChangeDataType=Change Data Type
 Repair_Dialog_ChangeFBType=Change FB Type
+Repair_Dialog_BestFitDataType=Change to: {0}
+Repair_Dialog_BestFitFBType=Change to: {0}
