Add performance mode for ST editor

--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
@@ -51,6 +51,7 @@ STCoreCodeMiningPreferencePage_EnableReferencedVariablesCodeMinings=Referenced v
 STCoreContentAssistPreferencePage_ContentAssist=Content Assist
 STCoreContentAssistPreferencePage_AutoActivationTriggers=Auto activation triggers
 STCoreContentAssistPreferencePage_ChangedSettingsEffect=Changed settings will only affect newly opened editors!
+STCoreEditorPreferencePage_PerformanceModeThreshold=Performance mode threshold in lines
 STCoreHoverProvider_EventKind=EVENT
 STCoreHoverProvider_FBKind=FUNCTION_BLOCK
 STCoreHoverProvider_FBTypeKind=FUNCTION_BLOCK
