Divided Update Changes into separate rename/delete changes

--- a/plugins/org.eclipse.fordiac.ide.typemanagement/src/org/eclipse/fordiac/ide/typemanagement/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.typemanagement/src/org/eclipse/fordiac/ide/typemanagement/messages.properties
@@ -128,3 +128,4 @@ DeleteLibraryParticipant_Change_Title=Removing Library Dependency
 AddLibraryDependency_Change_Title=Adding Library Dependency
 SafeStructDeletionChange_RootNodeChangeText=Changes for occurrence: {0}{1}
 UpdateUntypedSubappPinChange_0=Pin is not part of untyped subapp
+ConfigurableChange_noChangeErrorMessage0=NO_CHANGE is selected
