Added download result for better library handling
Error markers now show info from downloaders

--- a/plugins/org.eclipse.fordiac.ide.gitlab/src/org/eclipse/fordiac/ide/gitlab/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.gitlab/src/org/eclipse/fordiac/ide/gitlab/messages.properties
@@ -10,7 +10,9 @@
  # Contributors:
  #   Prankur Agarwal - initial API and implementation and/or initial documentation 
  ###############################################################################
+Configuration_Incomplete=Configuration incomplete
 Connect=Connect
+Download_Error=Download Error: {0}
 GET=GET
 GitLab_Available_Packages=Available packages in GitLab
 GitLab_Import=Import files from GitLab into the workspace
@@ -20,6 +22,9 @@ GitLab_Url=gitLabURL
 GitLab_Url_Title=GitLab URL
 GitLab_Packages_And_Projects=Packages and projects
 GitLab_PreferenceId=org.eclipse.fordiac.ide.gitlab
+Library_Not_Found=Library not found
+No_Config=No Configuration
 Private_Token=PRIVATE-TOKEN
 Token=Token:
 URL=URL:
+Version_Not_Found=Version not found
