Add find action override in variables view for evaluator debugging
Add an override for the find action in the variables view to also search
not previously expanded/loaded variables for evaluator debugging.

--- a/plugins/org.eclipse.fordiac.ide.debug.ui/src/org/eclipse/fordiac/ide/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.debug.ui/src/org/eclipse/fordiac/ide/debug/ui/messages.properties
@@ -1,3 +1,5 @@
+EvaluatorDebugFindAction_Text=&Find...
+EvaluatorDebugFindDialog_Title=Filter
 EvaluatorWatchExpressionFactoryAdapter_NoExpressionForVariable=Could not determine expression for variable
 FordiacDebugPreferencePage_Description=General settings for 4diac IDE debugging
 FordiacDebugPreferencePage_ValueMaxDisplayLength=Value maximum display length
