Reworked SystemEditor for Editing the List of Applications
The system editor now shows only the list of applications. There now
applications are created, deleted, and reordered.

The NewApplicationWizard has been removed as this should not be done
anymore via the system explorer.

--- a/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/src/org/eclipse/fordiac/ide/systemmanagement/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/src/org/eclipse/fordiac/ide/systemmanagement/ui/messages.properties
@@ -17,8 +17,6 @@
 AutomationSystemEditor_ShowingFirstApplication=Showing first application.
 AutomationSystemEditor_ShowingSystem=Showing system.
 AutomationSystemEditor_CouldNotLoadSystem=Could not load system: {0}\! \nCheck if file exists and is correct\!
-NewApplicationWizardTitle=New Application
-NewApplicationPage_NewApplicationDescription=Create new application in system {0}
 New4diacProjectWizard_WizardName=New 4diacProject
 New4diacProjectWizard_WizardDesc=Creates a new 4diacProject
 NewSystemWizardPage_CreateNewSystem=Create a new System
@@ -26,10 +24,12 @@ New4diacProjectWizard_InitialSystemName=Initial system name
 New4diacProjectWizard_InitialApplicationName=Initial application name
 New4diacProjectWizard_SystemNameNotValid = System name is not a valid Identifier
 New4diacProjectWizard_DirectoryWithProjectNameAlreadyExistsInWorkspace=Directory with selecting project name already exists in workspace\!
-NewApplicationCommand_LABEL_NewApplication=New Application
 NewApplicationPage_ErrorMessageNoSystemSelected=No Parent System Selected\!
 NewApplicationPage_ErrorMessage_EmptyElementName=Name must not be empty\!
 NewApplicationPage_ErrorMessageInvalidAppName=Application Name already used or not valid\!
 NewApplicationPage_OpenApplicationForEditing=Open application for editing when done
 NewSystemWizard_ShowAdvanced = &Advanced >>
 NewSystemWizard_HideAdvanced = << &Advanced
+SystemEditor_Applications=Applications:
+SystemEditor_SystemConfiguration=System Configuration:
+SystemEditor_SystemInformation=System Information:
