Add configuration and validation for 4diac project nature
Add configuration and validation for 4diac project nature to include
Xtext nature and export builder.

--- a/plugins/org.eclipse.fordiac.ide.systemmanagement/src/org/eclipse/fordiac/ide/systemmanagement/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement/src/org/eclipse/fordiac/ide/systemmanagement/messages.properties
@@ -16,6 +16,9 @@ AutomationSystemEditor_Discard_Changes=Discard my changes and reload the files
 AutomationSystemEditor_Save_Changes=Save my changes as ...
 AutomationSystemEditor_Overwrite_Changes=Overwrite local changes with "my" changes
 
+FordiacNature_Location=Project Configuration
+FordiacNature_MissingExportBuilder=Missing Export Builder on 4diac IDE project {0}
+FordiacNature_MissingXtextNature=Missing Xtext nature on 4diac IDE project {0}
 FordiacResourceChangeListener_4=Check copied type file:  
 FordiacResourceChangeListener_7=Save renamed system:
 FordiacResourceChangeListener_UpdateTypeLibForNewProject=Update type library for project {0}
