Add quickfix for missing export builder
Add a marker resolution for adding a missing export builder.

--- a/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/src/org/eclipse/fordiac/ide/systemmanagement/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/src/org/eclipse/fordiac/ide/systemmanagement/ui/messages.properties
@@ -17,6 +17,8 @@
 AutomationSystemEditor_ShowingFirstApplication=Showing first application.
 AutomationSystemEditor_ShowingSystem=Showing system.
 AutomationSystemEditor_CouldNotLoadSystem=Could not load system: {0}\! \nCheck if file exists and is correct\!
+MissingExportBuilderMarkerResolution_Description=Add 4diac Export Builder to project configuration
+MissingExportBuilderMarkerResolution_Label=Add 4diac Export Builder
 New4diacProjectWizard_WizardName=New 4diacProject
 New4diacProjectWizard_WizardDesc=Creates a new 4diacProject
 NewSystemWizardPage_CreateNewSystem=Create a new System
