Cleaned messages file of systemmanagement.ui plugin

--- a/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/src/org/eclipse/fordiac/ide/systemmanagement/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/src/org/eclipse/fordiac/ide/systemmanagement/ui/messages.properties
@@ -24,12 +24,10 @@ New4diacProjectWizard_InitialSystemName=Initial system name
 New4diacProjectWizard_InitialApplicationName=Initial application name
 New4diacProjectWizard_SystemNameNotValid = System name is not a valid Identifier
 New4diacProjectWizard_DirectoryWithProjectNameAlreadyExistsInWorkspace=Directory with selecting project name already exists in workspace\!
-NewApplicationPage_ErrorMessageNoSystemSelected=No Parent System Selected\!
-NewApplicationPage_ErrorMessage_EmptyElementName=Name must not be empty\!
-NewApplicationPage_ErrorMessageInvalidAppName=Application Name already used or not valid\!
-NewApplicationPage_OpenApplicationForEditing=Open application for editing when done
+OpenApplicationForEditing=Open application for editing when done
 NewSystemWizard_ShowAdvanced = &Advanced >>
 NewSystemWizard_HideAdvanced = << &Advanced
 SystemEditor_Applications=Applications:
 SystemEditor_SystemConfiguration=System Configuration:
 SystemEditor_SystemInformation=System Information:
+SystemExplorerNewActionProvider_New=&New
