Add validation preferences for ST editor

--- a/plugins/org.eclipse.fordiac.ide.structuredtextalgorithm.ui/src/org/eclipse/fordiac/ide/structuredtextalgorithm/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextalgorithm.ui/src/org/eclipse/fordiac/ide/structuredtextalgorithm/ui/messages.properties
@@ -1,3 +1,5 @@
+STAlgorithmCustomValidatorConfigurationBlock_ShadowingFunction=An unqualified reference to a METHOD or ALGORITHM is shadowing a FUNCTION
+STAlgorithmCustomValidatorConfigurationBlock_UnusedAlgorithm=An unused algorithm
 STAlgorithmLabelProvider_AlgorithmText=ALGORITHM {0}
 STAlgorithmLabelProvider_MethodText=METHOD {0}
 STAlgorithmQuickfixProvider_Add_missing_algorithm=Add missing algorithm {0}
