--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
@@ -51,6 +51,19 @@ STCoreCodeMiningPreferencePage_EnableReferencedVariablesCodeMinings=Referenced v
 STCoreContentAssistPreferencePage_ContentAssist=Content Assist
 STCoreContentAssistPreferencePage_AutoActivationTriggers=Auto activation triggers
 STCoreContentAssistPreferencePage_ChangedSettingsEffect=Changed settings will only affect newly opened editors!
+STCoreCustomValidatorConfigurationBlock_CodingStyle=Coding style
+STCoreCustomValidatorConfigurationBlock_ForControlVariableNonTemporary=Using a non-temporary variable as the control variable of a FOR loop
+STCoreCustomValidatorConfigurationBlock_LiteralImplicitConversion=Implicit conversion in literal
+STCoreCustomValidatorConfigurationBlock_Literals=Literals
+STCoreCustomValidatorConfigurationBlock_PotentialProgrammingProblems=Potential programming problems
+STCoreCustomValidatorConfigurationBlock_StringIndexOutOfBounds=String subscript index out of bounds
+STCoreCustomValidatorConfigurationBlock_TruncatedStringLiteral=String literal will be truncated to maximum length of variable
+STCoreCustomValidatorConfigurationBlock_UnnecessaryCode=Unnecessary code
+STCoreCustomValidatorConfigurationBlock_UnnecessaryConversion=Unnecessary conversion
+STCoreCustomValidatorConfigurationBlock_UnnecessaryLiteralConversion=Unnecessary conversion in literal
+STCoreCustomValidatorConfigurationBlock_UnnecessaryNarrowConversion=Unnecessary narrow conversion
+STCoreCustomValidatorConfigurationBlock_UnnecessaryWideConversion=Unnecessary wide conversion
+STCoreCustomValidatorConfigurationBlock_WrongNameCase=Name of referenced feature has different case
 STCoreEditorPreferencePage_PerformanceModeThreshold=Performance mode threshold in lines
 STCoreHoverProvider_EventKind=EVENT
 STCoreHoverProvider_FBKind=FUNCTION_BLOCK
