[Clean-up] Reworked EMF Resource saving to not use typeeditable

--- a/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
@@ -66,6 +66,7 @@ FordiacTypeResource_NotInWorkspace=Could not load file because its not part of t
 FordiacTypeResource_SaveToUnsupportedURI=Cannot save type to non-workspace URI {0}
 FordiacTypeResource_TypeImportError=Type Import Error
 FordiacTypeResource_UnsupportedFileType=Unsupported file type: {0}
+FordiacTypeResource_UnsupportedContent=Unsupported content: {0}
 FordiacTypeResource_XMLError=XML Error
 IdentifierVerifier_NameConsecutiveUnderscore=Name: ''{0}'' must not contain consecutive underscores
 IdentifierVerifier_NameNotAValidIdentifier=Name: ''{0}'' is not a valid identifier
