Update ST validation for new simple FB standard
Update ST validation for new simple FB standard:
- update messages for validations and quickfixes,
- update constants and names of variables and methods,
- fix filtering of non-ST algorithms in validator to correctly detect
  missing algorithms,
- fix names of algorithms created in missing algorithm quickfix,
- perform clean-up of code.

--- a/plugins/org.eclipse.fordiac.ide.structuredtextalgorithm/src/org/eclipse/fordiac/ide/structuredtextalgorithm/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextalgorithm/src/org/eclipse/fordiac/ide/structuredtextalgorithm/messages.properties
@@ -11,7 +11,7 @@
  #   Martin Melik Merkumians - initial API and implementation and/or initial documentation
  ###############################################################################
 STAlgorithmValidator_DuplicateMethodOrAlgorithmName=Duplicate METHOD or ALGORITHM named ''{0}''
-STAlgorithmValidator_MissingAlgorithmForECState=Missing algorithm ''{0}'' for ECState ''{1}''
+STAlgorithmValidator_MissingAlgorithm=Missing algorithm ''{0}''
 STAlgorithmValidator_UnqualifiedMethodOrAlgorithmShadowingFunction=The unqualified METHOD or ALGORITHM ''{0}'' is shadowing a FUNCTION found in {1} 
 STAlgorithmValidator_UnusedAlgorithm=Unused algorithm ''{0}''
 STAlgorithmValidator_NameUsedAsEventInput=Name ''{0}'' already used for an event input
