Check for syntax and linking errors before ST refactoring
Check for syntax and linking errors and inform the user that the
refactoring may not be accurate before refactoring.

--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
@@ -45,6 +45,9 @@ STCoreQuickfixProvider_RemoveInvalidExitStatementDescription=Removes EXIT statem
 STCoreQuickfixProvider_RemoveInvalidContinueStatementLabel=Remove CONTINUE statement
 STCoreQuickfixProvider_RemoveInvalidContinueStatementDescription=Removes CONTINUE statement
 STCoreQuickfixProvider_OrganizeImports=Organize imports
+STCoreChangeConverter_LinkingErrors=The file ''{0}'' has unresolved references. Refactoring may not be accurate\!
+STCoreChangeConverter_ReadOnly=Affected file ''{0}'' is read-only
+STCoreChangeConverter_SyntaxErrors=The file ''{0}'' has syntax errors. Refactoring may not be accurate\!
 STCoreCodeMiningPreferencePage_EnableCodeMinings=Enable code minings
 STCoreCodeMiningPreferencePage_EnableLiteralTypeCodeMinings=Literal type
 STCoreCodeMiningPreferencePage_EnableReferencedVariablesCodeMinings=Referenced variables in calls
