Add validations and quickfixes for package declarations in ST editor
Add validations and quickfixes to ensure package declarations of global
constants and functions match the folder structure. The validation is
currently set to be ignored by default and can be enabled by users.

--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
@@ -23,6 +23,7 @@ STCoreQuickfixProvider_AddExplicitTypecastDescription=Add typecast from {0} to {
 STCoreQuickfixProvider_AddExplicitTypecastLabel=Add explicit typecast
 STCoreQuickfixProvider_ChangeConversionDescription=Change conversion
 STCoreQuickfixProvider_ChangeConversionLabel=Change conversion
+STCoreQuickfixProvider_ChangePackage=Change package declaration
 STCoreQuickfixProvider_ChangeVariableCaseAsDeclaredDescription=Changes variable name case as declared
 STCoreQuickfixProvider_ChangeVariableCaseAsDeclaredLabel=Change variable name case as declared
 STCoreQuickfixProvider_CreateImport=Import ''{0}'' ({1})
@@ -58,6 +59,7 @@ STCoreCustomValidatorConfigurationBlock_CodingStyle=Coding style
 STCoreCustomValidatorConfigurationBlock_ForControlVariableNonTemporary=Using a non-temporary variable as the control variable of a FOR loop
 STCoreCustomValidatorConfigurationBlock_LiteralImplicitConversion=Implicit conversion in literal
 STCoreCustomValidatorConfigurationBlock_Literals=Literals
+STCoreCustomValidatorConfigurationBlock_PackageNameMismatch=The package name does not match the folder structure
 STCoreCustomValidatorConfigurationBlock_PotentialProgrammingProblems=Potential programming problems
 STCoreCustomValidatorConfigurationBlock_StringIndexOutOfBounds=String subscript index out of bounds
 STCoreCustomValidatorConfigurationBlock_TruncatedStringLiteral=String literal will be truncated to maximum length of variable
