--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore/src/org/eclipse/fordiac/ide/structuredtextcore/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore/src/org/eclipse/fordiac/ide/structuredtextcore/messages.properties
@@ -76,3 +76,4 @@ STCoreValidator_CallsCannotBeAssignedTo=Assignment to calls are not possible.
 STCoreValidator_VariableMaybeNotInitialized=Variable may not have been initialized
 STCoreValidator_ControlFlowStatementNeedsToBeInsideALoop={0} statement is only valid inside a loop statement (FOR/WHILE/REPEAT)
 STCoreValidator_ArrayAccessReceiverIsInvalid=Invalid receiver for array access operator
+STCoreValidator_PackageNameMismatch=The declared package ''{0}'' does not match the expected package ''{1}''
