Fix error handling in value converters
Fix error handling in value converters to avoid NPE if a value cannot be
found with the scanner for the specific pattern and also improve error
messages during array and struct parsing.

--- a/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
@@ -11,6 +11,7 @@
  #  Gerhard Ebenhofer, Alois Zoitl
  #    - initial API and implementation and/or initial documentation
  ################################################################################
+ArrayValueConverter_IllegalElementValue=Illegal value for element at index {0}
 ArrayValueConverter_InvalidRepeatSyntax=Invalid array repeat syntax
 CommonElementImporter_ERROR_DeclarationNotSet=Declaration not set
 CommonElementImporter_ERROR_MissingAuthorInfo=Author missing
@@ -87,7 +88,9 @@ LinkConstraints_STATUSMessage_hasAlreadyOutputConnection={0} has already an outp
 LinkConstraints_STATUSMessage_IN_IN_OUT_OUT_notAllowed=Input - Input or Output - Output connections are not allowed\!
 LinkConstraints_STATUSMessage_NotCompatible={0} not compatible with {1}
 NameRepository_NameAlreadyExists=Element with Name: {0} already exists\!
+StructValueConverter_IllegalMemberValue=Illegal value for member ''{0}''
 StructValueConverter_InvalidStructLiteral=Invalid struct literal
+StructValueConverter_NoValueConverter=No value converter for member ''{0}''
 TypedElementAnnotations_TypeNotFound=Type ''{0}'' not found
 TypedElementAnnotations_TypeNotSet=Type is not set
 TypeLibrary_TypeExists=A type with name ''{0}'' already exists
