Add separate warning for truncating literal conversions
Also add exceptions for semantically relevant literal conversions.

--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore.ui/src/org/eclipse/fordiac/ide/structuredtextcore/ui/messages.properties
@@ -37,8 +37,8 @@ STCoreQuickfixProvider_RemoveTrailingUnderscoreDescription=Remove trailing under
 STCoreQuickfixProvider_RemoveTrailingUnderscoreLabel=Remove trailing underscores from identifier
 STCoreQuickfixProvider_RemoveUnnecessaryConversionDescription=Removes unnecessary conversion
 STCoreQuickfixProvider_RemoveUnnecessaryConversionLabel=Remove unnecessary conversion
-STCoreQuickfixProvider_RemoveUnnecessaryLiteralConversionDescription=Replace with result ''{0}''
-STCoreQuickfixProvider_RemoveUnnecessaryLiteralConversionLabel=Remove unnecessary literal conversion
+STCoreQuickfixProvider_RemoveLiteralConversionDescription=Replace with result ''{0}''
+STCoreQuickfixProvider_RemoveLiteralConversionLabel=Remove literal conversion
 STCoreQuickfixProvider_RemoveImportDescription=Remove import
 STCoreQuickfixProvider_RemoveImportLabel=Remove import
 STCoreQuickfixProvider_RemoveInvalidExitStatementLabel=Remove EXIT statement
@@ -63,6 +63,7 @@ STCoreCustomValidatorConfigurationBlock_PackageNameMismatch=The package name doe
 STCoreCustomValidatorConfigurationBlock_PotentialProgrammingProblems=Potential programming problems
 STCoreCustomValidatorConfigurationBlock_StringIndexOutOfBounds=String subscript index out of bounds
 STCoreCustomValidatorConfigurationBlock_TruncatedStringLiteral=String literal will be truncated to maximum length of variable
+STCoreCustomValidatorConfigurationBlock_TruncatingLiteralConversion=Truncating conversion of literal
 STCoreCustomValidatorConfigurationBlock_UnnecessaryCode=Unnecessary code
 STCoreCustomValidatorConfigurationBlock_UnnecessaryConversion=Unnecessary conversion
 STCoreCustomValidatorConfigurationBlock_UnnecessaryLiteralConversion=Unnecessary conversion in literal
