--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore/src/org/eclipse/fordiac/ide/structuredtextcore/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore/src/org/eclipse/fordiac/ide/structuredtextcore/messages.properties
@@ -29,6 +29,7 @@ STCoreValidator_Implicit_Conversion_In_Literal=Implicit conversion in literal fr
 STCoreValidator_Invalid_Literal=Invalid {0} literal: {1}
 STCoreValidator_InvalidWildcardImport=Invalid wildcard import ''{0}''
 STCoreValidator_Trailing_Underscore_In_Identifier=Identifiers shall not have a trailing underscore ('_') character
+STCoreValidator_TruncatingLiteralConversion=Truncating conversion of literal to {0}
 STCoreValidator_Argument_Not_Assignable=Argument is not assignable
 STCoreValidator_Assignment_Invalid_Left_Side=Not possible to assign a value to the left side of this assignment
 STCoreValidator_Attempting_To_Call_Standard_Function_With_Formal_Arguments=Attempting to call standard function {0} with formal arguments
