Relax validation to allow comparable types for CASE labels
Relax the validation of CASE statements to allow comparable types for
CASE labels, instead of requiring that the type of the label is
assignable to the type of the selector expression.

--- a/plugins/org.eclipse.fordiac.ide.structuredtextcore/src/org/eclipse/fordiac/ide/structuredtextcore/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextcore/src/org/eclipse/fordiac/ide/structuredtextcore/messages.properties
@@ -62,6 +62,7 @@ STCoreValidator_DuplicateAttribute=Duplicate attribute {0} in pragma
 STCoreValidator_IndexRangeExpressionInvalid=Invalid expression for defining ranges, must be of the form ANY_INT..ANY_INT
 STCoreValidator_IndexRangeTypeInvalid=Type {0} is not valid for defining ranges. Ranges must be of type ANY_INT
 STCoreValidator_NonAnyStringNotMaxLengthSettingNotAllowed=For types not of ANY_STRING no maximum length may be defined
+STCoreValidator_NonComparableTypes=Cannot compare {0} with {1}
 STCoreValidator_NonConstantExpressionInVariableDeclaration=Non-constant expression in variable declaration
 STCoreValidator_MaxLengthTypeInvalid=Type {0} is not valid to specify an ANY_STRING max length. Max length must be of type ANY_INT
 STCoreValidator_TooManyIndicesGiven=Too many indices in subscript access: {0} indices given, but only {1} allowed for {2}
