Correctly handle the right interfacebar in collision detection
To correctly handle collisions of children of expanded subapps the width
of the subapp has to be reduced.

--- a/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.model/src/org/eclipse/fordiac/ide/model/messages.properties
@@ -51,6 +51,7 @@ Error_SelfInsertion={0} cannot be inserted into itself!
 ErrorMarkerInterfaceAnnotations_MissingVariableForAttribute=Missing variable for attribute: {0}
 ErrorMarkerInterfaceAnnotations_MissingVariableForValue=Missing variable for value: {0}
 FBNetworkAnnotations_CollisionMessage=Collision between {0} and {1}
+FBNetworkAnnotations_InterfaceBarCollisionMessage=Collision of {0} with Maximum Size of Interface Bar of {1}
 FBTImporter_ADAPTER_DECLARATION_TYPE_EXCEPTION=AdapterDeclaration: type has to be set\!
 FBTImporter_ECTRANASITION_CONDITION_EXCEPTION=ECTransition Condition has to be set\!
 FBTImporter_ECTRANSITION_DEST_EXCEPTION=ECTransition Destination has to be set\!
