Improve changing values in variables view
Improve changing values in variables view:
- Add shortcut to change variable value
- Allow changing multiple values at once
- Show simplified input dialog for single values
- Show structured edit dialog for structured values
- Show structured edit dialog for multiple variables

--- a/plugins/org.eclipse.fordiac.ide.debug.ui/src/org/eclipse/fordiac/ide/debug/ui/messages.properties
+++ b/plugins/org.eclipse.fordiac.ide.debug.ui/src/org/eclipse/fordiac/ide/debug/ui/messages.properties
@@ -1,5 +1,9 @@
 EvaluatorDebugFindAction_Text=&Find...
 EvaluatorDebugFindDialog_Title=Filter
+EvaluatorVariableValueEditor_Exception=An exception occurred
+EvaluatorVariableValueEditor_Invalid=Invalid value
+EvaluatorVariableValueEditor_Message=Enter a new value for {0}:
+EvaluatorVariableValueEditor_Title=Change Value
 EvaluatorWatchExpressionFactoryAdapter_NoExpressionForVariable=Could not determine expression for variable
 FordiacDebugPreferencePage_Description=General settings for 4diac IDE debugging
 FordiacDebugPreferencePage_ValueMaxDisplayLength=Value maximum display length
